# WARANDPEACE

./: .replit  main.sh  pyproject.toml
bungee/: config.yml  eaglercraft_skins_cache.db  locations.yml
bungee/plugins/EaglercraftXBungee/: listeners.yml  settings.yml
bungee/plugins/ViaVersion/: config.yml
