[tool.poetry]
name = "repl-nix-warandpeace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_warandpeace"}]

[tool.poetry.dependencies]
python = "^3.10"
ping3 = "^4.0.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
